--- a/css/tab-friend.css
+++ b/css/tab-friend.css
@@ -12,7 +12,7 @@
 
 #friends-content h1 {
   font-size: 32px;  
-  margin-bottom: 10px; /* Уменьшил отступ снизу */
+  margin-bottom: 10px;
 }
 
 .invite-container {
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin-top: 20px; /* Опустил блок ниже */
+  margin-top: 20px;
 }
 
 .invite-box {
@@ -75,9 +75,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: -130%;
-  width: 100%;
+  margin-top: 20px;
   gap: 20px;
 }
 
@@ -86,8 +84,8 @@
   color: white;
   border: none;
   border-radius: 10px;
-  padding: 2% 10%; /* Увеличил отступы для увеличения размера кнопки */
-  font-size: 24px; /* Увеличил размер шрифта */
+  padding: 2% 10%;
+  font-size: 24px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -99,49 +97,41 @@
   margin-left: 5px;
 }
 
-.square-button {
-  background-color: #00aaff;
-  border: none;
-  border-radius: 15px;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.square-button:disabled {
-  background-color: #0077cc;
-  cursor: not-allowed;
-  opacity: 0.6;
-}
-
-.copy-image {
-  width: 30px;
-  height: 30px;
-}
-
 #copy-notification {
-  display: none;
-  position: fixed;
-  bottom: -50px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: black;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 20px;
-  font-size: 16px;
-  opacity: 0;
-  transition: bottom 0.5s ease, opacity 1s ease;
-  z-index: 1000;
+    display: none;
+    position: fixed;
+    bottom: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    font-size: 16px;
+    opacity: 0;
+    transition: bottom 0.5s ease, opacity 1s ease;
+    z-index: 1000;
 }
 
 #copy-notification.show {
-  display: block;
-  bottom: 10%;
-  opacity: 1;
+    display: block;
+    bottom: 10%;
+    opacity: 1;
+}
+
+.friends-list {
+    margin-top: 40px;
+    color: white;
+}
+
+.friends-list ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.friends-list li {
+    font-size: 18px;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
@@ -154,21 +144,4 @@
       width: 80%;
       font-size: 16px;
   }
-
-  .square-button {
-      width: 45px;
-      height: 45px;
-  }
-
-  .copy-image {
-      width: 25px;
-      height: 25px;
-  }
-}
-
-img, button, * {
-  outline: none;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-user-select: none;
-  user-select: none;
 }
